# dieseq

./: Cargo.toml  README.md  shell.nix
src/: main.rs  pianoroll.rs  renderer.rs  ui.rs
