[package]
name = "dieseq"
version = "0.1.0"
authors = ["Сухарик <suhr@i2pmail.org>"]

[dependencies]
gfx = "0.17"
gfx_device_gl = "*"
gfx_window_glutin = "*"
glutin = "*"

cgmath = { version = "*", features = ["serde"] }
palette = "*"
portmidi = "*"
clap = "2"

serde = "*"
serde_derive = "*"
ron = "*"

[profile.release]
lto = true
