[package]
name = "dieseq"
version = "0.1.0"
authors = ["Сухарик <suhr@i2pmail.org>"]
edition = "2018"

[dependencies]
gfx = "*"
gfx_device_gl = "*"
gfx_window_glutin = "*"
glutin = "*"

cgmath = { version = "*", features = ["serde"] }
palette = "*"
clap = "2"

serde = "*"
serde_derive = "*"
ron = "*"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
